--- a/Style.css
+++ b/Style.css
@@ -75,4 +75,54 @@ header h1 {
 	display: block;
 	border: 0;
 	outline: none;
+	background: transparent;
+}
+
+.search-bar form button {
+	background: #ff5361;
+	width: 55px;
+	height: 55px;
+	border-radius: 50%;
+	border: 0;
+	outline: none;
+	cursor: pointer;
+}
+
+.location-input {
+	flex: 1;
+}
+
+.search-bar form label {
+	font-weight: 600;
+}
+
+.sub-title {
+	margin: 50px;
+	font-size: 2.2vw;
+	font-weight: 500;
+	color: #333;
+}
+
+.exclusives {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-gap: 30px;
+}
+
+.exclusives div img {
+	width: 100%;
+	border-radius: 10px;
+}
+
+.exclusives div {
+	position: relative;
+}
+
+.exclusives div span {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	color: #fff;
 }
